fix layout issue of sidebar and content - use grid on the main part of the page

--- a/replica/style.css
+++ b/replica/style.css
@@ -7,6 +7,17 @@
   --light-orange: rgb(255, 227, 191);
 }
 
+img {
+  width: 400px;
+  height: 200px;
+}
+/* found my problem here - should have used grid on the entire page to start with, creating two columns, one 70% wide and the other 30%, as shown below */
+#main {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-gap: 50px;
+}
+
 /*  < - - - ALL MY ORIGINAL CODE   - - - >
 body {
   background-color: #d9e0ff;
